--- a/VideoShopProject/VideoShop/Views/Home/Index.cshtml
+++ b/VideoShopProject/VideoShop/Views/Home/Index.cshtml
@@ -3,29 +3,32 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Movie Rental App</h1>
+    <p class="lead">Register movies, customers and check out rentals for this app.</p>
+    
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        <h2>@Html.ActionLink("Movies","Index","Movies")</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+          Create movies, view movies.
         </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+       
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <h2>@Html.ActionLink("Customers","Index","Customers")</h2>
+        <p>Create customers, view customers.</p>
+       
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h2>@Html.ActionLink("Rent a movie","Index","RentStats")</h2>
+        <p>Rent a movie for a customer, view all rented movies for each customer.</p>
+       
+    </div>
+    <div class="col-md-4">
+        <h2>@Html.ActionLink("Rented Now", "Index", "RentReturns")</h2>
+        <p>View all rented now movies, return a movie.</p>
+     
     </div>
 </div>
