--- a/VideoShopProject/VideoShop/Views/RentStats/Index.cshtml
+++ b/VideoShopProject/VideoShop/Views/RentStats/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h2>Rented Movies</h2>
-
+<h3><font color="red">@TempData["message"]</font></h3>
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
