--- a/VideoShopProject/VideoShop/Views/RentReturns/Delete.cshtml
+++ b/VideoShopProject/VideoShop/Views/RentReturns/Delete.cshtml
@@ -12,20 +12,38 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.RentStats.RentId)
+            @Html.DisplayNameFor(model => model.RentStats.Customer.FirstName)
         </dt>
+      
 
         <dd>
-            @Html.DisplayFor(model => model.RentStats.RentId)
+            @Html.DisplayFor(model => model.RentStats.Customer.FirstName)
+            </dd>      
+    </dl>
+    <dl class="dl-horizontal">
+        
+        <dt>
+            @Html.DisplayNameFor(model => model.RentStats.Customer.LastName)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.RentStats.Customer.LastName)
         </dd>
+    </dl>
+    <dl class="dl-horizontal">
 
+        <dt>
+            @Html.DisplayNameFor(model => model.RentStats.Movie.Title)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.RentStats.Movie.Title)
+        </dd>
     </dl>
 
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
+            <input type="submit" value="Return" class="btn btn-default" /> |
             @Html.ActionLink("Back to List", "Index")
         </div>
     }
