--- a/VideoShopProject/VideoShop/Views/RentReturns/Details.cshtml
+++ b/VideoShopProject/VideoShop/Views/RentReturns/Details.cshtml
@@ -7,20 +7,40 @@
 <h2>Details</h2>
 
 <div>
-    <h4>RentReturn</h4>
+    <h4>Return a movie</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.RentStats.RentId)
+            @Html.DisplayNameFor(model => model.RentStats.Customer.FirstName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.RentStats.RentId)
+            @Html.DisplayFor(model => model.RentStats.Customer.FirstName)
+        </dd>
+
+    </dl>
+    <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.RentStats.Customer.LastName)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.RentStats.Customer.LastName)
+        </dd>
+
+    </dl>
+    <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.RentStats.Movie.Title)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.RentStats.Movie.Title)
         </dd>
 
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ReturnId }) |
+   
     @Html.ActionLink("Back to List", "Index")
 </p>
