--- a/VideoShopProject/VideoShop/Views/RentStats/Create.cshtml
+++ b/VideoShopProject/VideoShop/Views/RentStats/Create.cshtml
@@ -7,10 +7,10 @@
 <h2>Create</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Rent a movie</h4>
         <hr />
@@ -33,9 +33,11 @@
 
         <div class="form-group">
             @Html.LabelFor(model => model.StartDate, htmlAttributes: new { @class = "control-label col-md-2" })
+       
             <div class="col-md-10">
-                @Html.EditorFor(model => model.StartDate, new { htmlAttributes = new { @class = "form-control" } })
-                @DateTime.Now.AddDays(0)
+                @DateTime.Now.Date
+                @Html.EditorFor(model => model.StartDate, new { htmlAttributes = new { @class = "form-control"} })
+               
                 @Html.ValidationMessageFor(model => model.StartDate, "", new { @class = "text-danger" })
                 
             </div>
@@ -44,8 +46,9 @@
         <div class="form-group">
             @Html.LabelFor(model => model.EndDate, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.EndDate, new { htmlAttributes = new { @class = "form-control" } })
-                @DateTime.Now.AddDays(3)
+                @DateTime.Now.Date.AddDays(2)
+                @Html.EditorFor(model => model.EndDate, new { htmlAttributes = new { @class = "form-control"} })
+              
                 @Html.ValidationMessageFor(model => model.EndDate, "", new { @class = "text-danger" })
             </div>
         </div>
