Added functionality to return movie. Added enddatetime and startdatetime

--- a/VideoShopProject/VideoShop/Views/RentStats/Create.cshtml
+++ b/VideoShopProject/VideoShop/Views/RentStats/Create.cshtml
@@ -16,7 +16,7 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.CustomerId, "CustomerId", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Customer", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("CustomerId", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.CustomerId, "", new { @class = "text-danger" })
@@ -24,7 +24,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.MovieId, "MovieId", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Title", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("MovieId", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.MovieId, "", new { @class = "text-danger" })
@@ -32,19 +32,17 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.StartDate, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Start Date", htmlAttributes: new { @class = "control-label col-md-2" })
        
             <div class="col-md-10">
-                @DateTime.Now.Date
-                @Html.EditorFor(model => model.StartDate, new { htmlAttributes = new { @class = "form-control"} })
-               
-                @Html.ValidationMessageFor(model => model.StartDate, "", new { @class = "text-danger" })
+               <h5>@DateTime.Now</h5>
+           
                 
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.EndDate, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("End Date", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @DateTime.Now.Date.AddDays(2)
                 @Html.EditorFor(model => model.EndDate, new { htmlAttributes = new { @class = "form-control"} })
