--- a/VideoShopProject/VideoShop/Views/Movies/Index.cshtml
+++ b/VideoShopProject/VideoShop/Views/Movies/Index.cshtml
@@ -9,9 +9,9 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-
-<input class="form-control" type="text" id="getvalue" name="getvalue"/>
-
+<div class="ui-widget">
+    <input class="form-control" type="text" id="getvalue" name="getvalue" />
+</div>
 <script type="text/javascript">
     $(document).ready(function () {
         $('#getvalue').autocomplete({
