--- a/VideoShopProject/VideoShop/Views/RentReturns/Delete.cshtml
+++ b/VideoShopProject/VideoShop/Views/RentReturns/Delete.cshtml
@@ -12,25 +12,17 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.RentStats.Customer.FirstName)
-        </dt>
-      
-
+            First Name
+        </dt>      
         <dd>
             @Html.DisplayFor(model => model.RentStats.Customer.FirstName)
-            </dd>      
-    </dl>
-    <dl class="dl-horizontal">
-        
+            </dd>   
         <dt>
-            @Html.DisplayNameFor(model => model.RentStats.Customer.LastName)
+            Last Name
         </dt>
         <dd>
             @Html.DisplayFor(model => model.RentStats.Customer.LastName)
         </dd>
-    </dl>
-    <dl class="dl-horizontal">
-
         <dt>
             @Html.DisplayNameFor(model => model.RentStats.Movie.Title)
         </dt>
@@ -38,6 +30,8 @@
             @Html.DisplayFor(model => model.RentStats.Movie.Title)
         </dd>
     </dl>
+  
+  
 
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
