--- a/VideoShopProject/VideoShop/Views/RentReturns/Details.cshtml
+++ b/VideoShopProject/VideoShop/Views/RentReturns/Details.cshtml
@@ -11,33 +11,48 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.RentStats.Customer.FirstName)
+            ID
         </dt>
-
         <dd>
-            @Html.DisplayFor(model => model.RentStats.Customer.FirstName)
+            @Html.DisplayFor(model=> model.ReturnId)
         </dd>
-
-    </dl>
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.RentStats.Customer.LastName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.RentStats.Customer.LastName)
-        </dd>
-
-    </dl>
-    <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.RentStats.Movie.Title)
         </dt>
-
         <dd>
             @Html.DisplayFor(model => model.RentStats.Movie.Title)
         </dd>
-
+        <dt>
+            First Name
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.RentStats.Customer.FirstName)
+        </dd>
+        <dt>
+           Last Name
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.RentStats.Customer.LastName)
+        </dd>
+        <dt>
+            Email
+        </dt>
+        <dd>
+            @Html.DisplayFor(model=> model.RentStats.Customer.Email)
+        </dd>
+        <dt>
+            Phone
+        </dt>
+        <dd>
+            @Html.DisplayFor(model=>model.RentStats.Customer.Phone)
+        </dd>
+        <dt>
+            City
+        </dt>
+        <dd>
+            @Html.DisplayFor(model=>model.RentStats.Customer.City)
+        </dd>
+       
     </dl>
 </div>
 <p>
