--- a/VideoShopProject/VideoShop/Views/RentReturns/Index.cshtml
+++ b/VideoShopProject/VideoShop/Views/RentReturns/Index.cshtml
@@ -13,22 +13,19 @@
 
 <table class="table">
     <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.RentStats.RentId)
-        </th>
-
+      
        
         <th>
-            @Html.DisplayNameFor(model => model.RentStats.StartDate)
+            Start Date
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.RentStats.EndDate)
+           End Date
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.RentStats.Customer.FirstName)
+           First Name
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.RentStats.Customer.LastName)
+            Last Name
         </th>
         <th>
             @Html.DisplayNameFor(model => model.RentStats.Movie.Title)
@@ -41,9 +38,7 @@
     if ( DateTime.Now.Date > item.RentStats.EndDate)
     {
     <tr class="highlighted">
-        <td>
-            @Html.DisplayFor(model => item.RentStats.RentId)
-        </td>
+      
         <td>
             @Html.DisplayFor(modelItem => item.RentStats.StartDate)
         </td>
@@ -69,9 +64,7 @@
     else
     {
         <tr>
-            <td>
-                @Html.DisplayFor(model => item.RentStats.RentId)
-            </td>
+           
             <td>
                 @Html.DisplayFor(modelItem => item.RentStats.StartDate)
             </td>
