--- a/VideoShopProject/VideoShop/Views/RentStats/Details.cshtml
+++ b/VideoShopProject/VideoShop/Views/RentStats/Details.cshtml
@@ -7,27 +7,17 @@
 <h2>Details</h2>
 
 <div>
-    <h4>RentStats</h4>
+    <h4>Rental Statistics</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.StartDate)
+            ID
         </dt>
-
         <dd>
-            @Html.DisplayFor(model => model.StartDate)
+            @Html.DisplayFor(model => model.RentId)
         </dd>
-
         <dt>
-            @Html.DisplayNameFor(model => model.EndDate)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.EndDate)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Customer.FirstName)
+            First Name
         </dt>
 
         <dd>
@@ -41,7 +31,21 @@
         <dd>
             @Html.DisplayFor(model => model.Movie.Title)
         </dd>
+        <dt>
+           Start Date
+        </dt>
 
+        <dd>
+            @Html.DisplayFor(model => model.StartDate)
+        </dd>
+
+        <dt>
+            End Date
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.EndDate)
+        </dd>
     </dl>
 </div>
 <p>
