--- a/VideoShopProject/VideoShop/Views/Home/About.cshtml
+++ b/VideoShopProject/VideoShop/Views/Home/About.cshtml
@@ -2,6 +2,6 @@
     ViewBag.Title = "About";
 }
 <h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h3>Personal project</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>This is a personal project for .NET MVC studies.</p>
