--- a/VideoShopProject/VideoShop/Views/Home/Contact.cshtml
+++ b/VideoShopProject/VideoShop/Views/Home/Contact.cshtml
@@ -2,16 +2,11 @@
     ViewBag.Title = "Contact";
 }
 <h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h3>How to contact me.</h3><br/>
+
+
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
-
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Support:</strong>   <a href="mailto:Simon.Lindmer@gmail.com">Simon.Lindmer@gmail.com</a>
+   
 </address>
