--- a/VideoShopProject/VideoShop/Views/RentStats/Create.cshtml
+++ b/VideoShopProject/VideoShop/Views/RentStats/Create.cshtml
@@ -44,7 +44,7 @@
         <div class="form-group">
             @Html.Label("End Date", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @DateTime.Now.Date.AddDays(2)
+               
                 @Html.EditorFor(model => model.EndDate, new { htmlAttributes = new { @class = "form-control"} })
               
                 @Html.ValidationMessageFor(model => model.EndDate, "", new { @class = "text-danger" })
@@ -64,12 +64,18 @@
     @Html.ActionLink("Back to List", "Index")
 </div>
 <script type="text/javascript">
-    $(document).ready(function () {
-        $('#getvalue').autocomplete({
-            source: '@Url.Action("GetTitle")'
-        });
-    })
+
+     $(document).ready(function () {
+         $('input[type=datetime]').datepicker({
+             dateFormat: "yy/mm/dd",
+             changeMonth: true,
+             changeYear: true,
+             yearRange: "+0:+1"
+         });
+
+     });
 </script>
+
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 @Scripts.Render("~/bundles/jqueryui")
